--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="image" id="intro-img">
-                    <img src="./images/Giorgos-Nikoulis.png" alt="Giorgos Nikoulis">
+                    <img src="./images/Giorgos-Nikoulis.webp" alt="Giorgos Nikoulis">
                     <div class="intro-contact">   
                         <a href="mailto:gnikoul@gmail.com">
                             <div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/transparency.png" alt="" loading="lazy">
+                        <img src="images/transparency.webp" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -109,7 +109,7 @@
                 </div>
                 </div><div class="project">
                     <div class="project-image">
-                        <img src="images/nanomaterialscad.png" alt="" loading="lazy">
+                        <img src="images/nanomaterialscad.webp" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -126,7 +126,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/heatlock.png" alt="" loading="lazy">
+                        <img src="images/heatlock.webp" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -143,7 +143,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/fenp.png" alt="" loading="lazy">
+                        <img src="images/fenp.webp" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -160,7 +160,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/mowgap.png" alt="" loading="lazy">
+                        <img src="images/mowgap.webp" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -176,7 +176,7 @@
                     </div>
                 </div><div class="project">
                     <div class="project-image">
-                        <img src="images/sildenafil.png" alt="" loading="lazy">
+                        <img src="images/sildenafil.webp" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -193,7 +193,7 @@
                 </div>
                 <div class="project" >
                     <div class="project-image">
-                        <img src="images/chargedistr.png" alt="" loading="lazy">
+                        <img src="images/chargedistr.webp" alt="" loading="lazy">
                     </div>
                     <div class="project-info">
                         <div class="title">
