--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>gnikoul</title>
-        <meta name="description" content="Explore Giorgos Nikoulis (gnikoul) portfolio: research, projects, and professional work online.">
-        <meta property="og:title" content="Gnikoul">
-        <meta property="og:description" content="Giorgos Nikoulis (gnikoul) portfolio: research, projects, and professional achievements.">
+        <title>Giorgos Nikoulis</title>
+        <meta name="description" content="Explore Giorgos Nikoulis portfolio: research, projects, and professional work online.">
+        <meta property="og:title" content="Giorgos Nikoulis">
+        <meta property="og:description" content="Giorgos Nikoulis portfolio: research, projects, and professional achievements.">
         <meta property="og:url" content="https://gnikoul.gr">
         <meta property="og:type" content="website">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
