--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta property="og:type" content="website">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="canonical" href="https://gnikoul.gr/">
         <link rel="stylesheet" type="text/css" href="./css/general.css">
         <link rel="stylesheet" type="text/css" href="./css/nav-bar.css">
         <link rel="stylesheet" type="text/css" href="./css/intro.css">
