remove img lazy load, add alt to images

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/transparency.webp" alt="" loading="lazy">
+                        <img src="images/transparency.webp" alt="Transparency Services for AI-Model Cards">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -110,7 +110,7 @@
                 </div>
                 </div><div class="project">
                     <div class="project-image">
-                        <img src="images/nanomaterialscad.webp" alt="" loading="lazy">
+                        <img src="images/nanomaterialscad.webp" alt="NanoMaterialsCAD">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -127,7 +127,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/heatlock.webp" alt="" loading="lazy">
+                        <img src="images/heatlock.webp" alt="Thermal insulation and heat guiding">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -144,7 +144,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/fenp.webp" alt="" loading="lazy">
+                        <img src="images/fenp.webp" alt="ML interatomic potentials for iron">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -161,7 +161,7 @@
                 </div>
                 <div class="project">
                     <div class="project-image">
-                        <img src="images/mowgap.webp" alt="" loading="lazy">
+                        <img src="images/mowgap.webp" alt="ML interatomic potential for W-Mo alloys">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -177,7 +177,7 @@
                     </div>
                 </div><div class="project">
                     <div class="project-image">
-                        <img src="images/sildenafil.webp" alt="" loading="lazy">
+                        <img src="images/sildenafil.webp" alt="Sildenafil nanoparticles using polymer stabilizers">
                     </div>
                     <div class="project-info">
                         <div class="title">
@@ -194,7 +194,7 @@
                 </div>
                 <div class="project" >
                     <div class="project-image">
-                        <img src="images/chargedistr.webp" alt="" loading="lazy">
+                        <img src="images/chargedistr.webp" alt="Single Nanoparticle Activities in Ensemble">
                     </div>
                     <div class="project-info">
                         <div class="title">
