--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta property="og:description" content="Giorgos Nikoulis portfolio: research, projects, and professional achievements.">
         <meta property="og:url" content="https://gnikoul.gr">
         <meta property="og:type" content="website">
+        <link rel="icon" type="image/png" href="/images/favicon-48.png" sizes="48x48">
+        <link rel="icon" type="image/png" href="/images/favicon-192.png" sizes="192x192">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="canonical" href="https://gnikoul.gr/">
@@ -33,21 +35,6 @@
                 <div id="Career">Career</div>
                 <div id="Contact">Contact</div>
             </nav>
-            <!-- <div style="
-                position: fixed;
-                top: 6.25rem;
-                right: 50%;
-                transform: translateX(50%);
-                background: #ffcc00;
-                padding: 0.625rem 0.938rem;
-                border-radius: 0.375rem;
-                font-size: 1rem;
-                text-align: center;
-                z-index: 9999;
-            ">
-                🚧<br>This page is under construction<br>🚧
-            </div> -->
-
             <section class="intro" id="intro">
                 <div class="about-me">
 
