--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
     <head>
         <title>Giorgos Nikoulis</title>
         <meta name="description" content="Explore Giorgos Nikoulis portfolio: research, projects, and professional work online.">
@@ -271,10 +271,10 @@
             </section>
 
             <footer class="contact">
-                <div class="find-me-head">You can find me via:</div>
+                <div class="find-me-head">You can find me on:</div>
                 <div class="find-me-info">
-                    email: <a href="mailto:gnikoul@gmail.com">gnikoul@gmail.com</a><br>
-                    <i class="fa-brands fa-github"></i> github: <a href="https://github.com/gnikoul" target="_blank">github.com/gnikoul</a><br>
+                    Email: <a href="mailto:gnikoul@gmail.com">gnikoul@gmail.com</a><br>
+                    GitHub: <a href="https://github.com/gnikoul" target="_blank">github.com/gnikoul</a><br>
                     PyPI: <a href="https://pypi.org/user/gnikoul/" target="_blank">pypi.org/user/gnikoul</a>
                 </div>
 
